--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@
 }
 .infocontainer {
     /*background-color: rgb(202, 9, 128); */
-    height: 58vh;whea
+    height: 58vh;
     width: 80vw;
     margin: 144px  auto;
 }
